--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ coverage
 # Bower dependency directory (https://bower.io/)
 bower_components
 
+# Firebase service account
+panwarin-notifications-service.json
+
 # node-waf configuration
 .lock-wscript
 
